@@ -59,6 +59,7 @@ This release also includes changes from <<release-3-7-XXX, 3.7.XXX>>.
 * Deprecated `ProcessLimitedStandardSuite` and `ProcessLimitedComputerSuite` in favor of `ProcessEmbeddedStandardSuite` and `ProcessEmbeddedComputerSuite` respectively.
 * Removed lambda oriented Gremlin testing from Gherkin test suite.
 * Moved all lambda oriented Gremlin tests to `LambdaStepTest` in the Java test suite.
+* Removed the `@RemoteOnly` testing tag in Gherkin as lambda tests have all been moved to the Java test suite.
 
 == TinkerPop 3.7.0 (Gremfir Master of the Pan Flute)
 
